# Python-II

./: .env  .env.example  .gitignore  Dockerfile.dev  docker-compose.yml  info.txt  notas_borar.txt  pyproject.toml  readme.md  requirements.txt
